fix width overflow

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
  	background-size: 100% auto;
 
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
   body {
   	font-family: "EB Garamond";
 	color: var(--fontcolor);
